# githook

./: .ghrc.example  Cargo.toml  EXAMPLES.md  LICENSE
.cargo/: config.toml
.githook/: post-merge.ghook  pre-commit.ghook  pre-commit.sh  test-builtins.ghook  test-content.ghook  test-file-function.ghook  test-groups.ghook  test-http.ghook
.github/workflows/: ci.yml  docs.yml  release.yml
crates/githook/: Cargo.toml
crates/githook-cli/: Cargo.toml
crates/githook-cli/src/: config.rs  errors.rs  main.rs  updater.rs
crates/githook-eval/: Cargo.toml
crates/githook-eval/src/: binary_ops.rs  builtins.rs  conditions.rs  config.rs  context.rs  contexts.rs  control_flow.rs  env_tests.rs  error.rs  executor.rs  executor.rs.backup  interpolation.rs  lib.rs  package_resolver.rs  stdlib.rs  value.rs
crates/githook-eval/src/contexts/: file.rs  git.rs  http.rs  mod.rs  primitives.rs
crates/githook-eval/src/executor/: expressions.rs  git_objects.rs  mod.rs
crates/githook-eval/stdlib/: git.ghook  git.ghook.backup
crates/githook-eval/tests/: boolean_tests.rs  env_tests.rs  executor_tests.rs  value_tests.rs
crates/githook-git/: Cargo.toml
crates/githook-git/src/: file.rs  lib.rs
crates/githook-lsp/: Cargo.toml  build.rs
crates/githook-lsp/src/: ast_utils.rs  backend.rs  codelens.rs  completion.rs  completion.rs.backup  completion_new.rs  diagnostics.rs  docs.rs  document.rs  documentlinks.rs  folding.rs  generated_docs.json  goto_definition.rs  hover.rs  import_resolver.rs  inlay_hints.rs  main.rs  references.rs  rename.rs  semantic_tokens.rs  symbols.rs
crates/githook-macros/: Cargo.toml
crates/githook-macros/src/: lib.rs  stdlib.rs
crates/githook-syntax/: Cargo.toml
crates/githook-syntax/src/: ast.rs  cache.rs  error.rs  lexer.rs  lib.rs  parser.rs
crates/githook-syntax/src/parser/: expressions.rs  mod.rs  statements.rs
crates/githook-syntax/tests/: lexer_tests.rs  parser_tests.rs  size_unit_tests.rs
crates/githook/src/: lib.rs
docs/: DOCUMENTATION_SUMMARY.md  EXAMPLES_TESTED.md  FIXED.md  README.md  TESTING.md  TESTING_FINDINGS.md  book.toml
docs/src/: SUMMARY.md  architecture.md  contributing.md  introduction.md
docs/src/advanced/: ci-cd.md  custom-snippets.md  performance.md  vscode.md
docs/src/cli/: README.md  check-update.md  list.md  update.md
docs/src/examples/: branch-naming.md  branch-protection.md  commit-validation.md  file-checks.md
docs/src/getting-started/: README.md  first-hook.md  repository-setup.md  running-hooks.md  troubleshooting.md
docs/src/installation/: README.md  cargo.md  releases.md  source.md  verify.md
docs/src/language/: arrays.md  closures.md  comments.md  control-flow.md  errors-new.md  expressions.md  file-object.md  git-new.md  git.md  macros.md  methods-new.md  number-methods.md  types.md  variables.md
docs/src/stdlib/: README.md  git.md  packages.md  quality.md  security.md  time.md
docs/theme/: githook-highlight.js  highlight-githook.js
vscode-extension/: .vscodeignore  README.md  githook-0.3.6.vsix  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: githook.tmLanguage.json
