[package]
name = "githook-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for githook git hooks"

[[bin]]
name = "githook"
path = "src/main.rs"

[dependencies]
githook.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
tempfile.workspace = true
dirs = "6.0.0"
self_update = { version = "0.42.0", default-features = false, features = ["rustls"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "rustls-tls"] }