[package]
name = "githook-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for githook git hooks"

[[bin]]
name = "githook"
path = "src/main.rs"

[dependencies]
githook.workspace = true
githook-syntax = { path = "../githook-syntax" }
githook-eval = { path = "../githook-eval" }
githook-git = { path = "../githook-git" }
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
tempfile.workspace = true
dirs = "6.0.0"
self_update = { version = "0.42.0", default-features = false, features = ["rustls"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }