[package]
name = "githook-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Interpreter and evaluator for githook"
keywords = ["interpreter", "evaluator"]

[dependencies]
anyhow.workspace = true
colored.workspace = true
regex.workspace = true
lru.workspace = true
glob = "0.3.3"
githook-syntax.workspace = true
githook-git.workspace = true
githook-macros.workspace = true
dirs = "6.0.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
shell-words = "1.1.1"
rayon = "1.10"
ahash = "0.8"
once_cell = "1.20"
smallvec = "1.13"
rustc-hash = "2.1"