[package]
name = "githook-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Execution engine and runtime for the githook scripting language"
keywords = ["interpreter", "evaluator", "runtime", "executor"]

[dependencies]
anyhow.workspace = true
colored.workspace = true
regex.workspace = true
lru.workspace = true
glob = "0.3.3"
inventory = "0.3"
githook-syntax.workspace = true
githook-git.workspace = true
githook-macros.workspace = true
dirs = "6.0.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
shell-words = "1.1.1"
rayon = "1.11"
ahash = "0.8.12"
once_cell = "1.21.3"
smallvec = "1.15.1"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"