[package]
name = "githook-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Git operations for githook"

[dependencies]
anyhow.workspace = true
regex.workspace = true
lru.workspace = true
once_cell.workspace = true
rayon.workspace = true
githook-macros = { path = "../githook-macros" }