[package]
name = "githook-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Git operations and utilities for the githook scripting language"
keywords = ["git", "vcs", "version-control", "diff"]

[dependencies]
anyhow.workspace = true
regex.workspace = true
lru.workspace = true
once_cell.workspace = true
rayon.workspace = true
githook-macros = { path = "../githook-macros" }