[package]
name = "githook-lsp"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "githook-lsp"
path = "src/main.rs"

[dependencies]
githook-syntax = { path = "../githook-syntax" }
githook-eval = { path = "../githook-eval" }

tower-lsp = "0.20.0"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# Utilities
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
urlencoding = "2.1.3"
once_cell = "1.20"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
