[package]
name = "githook-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language Server Protocol implementation for githook"

[[bin]]
name = "githook-lsp"
path = "src/main.rs"

[dependencies]
githook-syntax = { path = "../githook-syntax" }
githook-eval = { path = "../githook-eval" }

tower-lsp = "0.20.0"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"

# Utilities
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
urlencoding = "2.1.3"
once_cell = "1.20"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
