[package]
name = "githook-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for the githook scripting language"
keywords = ["macros", "proc-macro", "codegen"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.114", features = ["full", "extra-traits"] }
quote = "1.0.44"
proc-macro2 = "1.0.106"
