[package]
name = "githook-syntax"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Lexer and parser for the githook DSL"
keywords = ["parser", "lexer", "dsl"]

[dependencies]
anyhow.workspace = true
once_cell = "1.20"
smallvec = "1.13"

[dev-dependencies]