[package]
name = "githook-syntax"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Lexer and parser for the githook scripting language"
keywords = ["parser", "lexer", "ast", "syntax"]

[dependencies]
anyhow.workspace = true
once_cell = "1.20"
smallvec = "1.13"

[dev-dependencies]