[package]
name = "githook"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A powerful scripting language for Git hooks with LSP support"
readme = "../../README.md"

[dependencies]
githook-syntax.workspace = true
githook-eval.workspace = true
githook-git.workspace = true
anyhow.workspace = true